tests/core/error/fts-rank-1.rq
SELECT (fts:rank(?u) AS ?rank) { ?u a rdfs:Resource }
